Version 3.3.0
* Post DiFX-2.2

Version 3.2.0
* Fix for correlation of mismatched sidebands.  Requires contemporaneous
upgrade of difxio.
* Add DIFX_LABEL env var to FITS files
* Make sniffer plots more consistent with AIPS.  They will always show USB now and should have the same phase sense.
* Use the SX gain table rows when SX observing is used.  Thanks to James Miller-Jones for reporting the problem.
* pcal, weather, tsys, and flag files could be compromized by observations spanning the new year.
  - Now handle day of year jumps
  - Also handle possible use of mjds rather than days of year in future
* increase number of phase cal tones allowed
* Version for DiFX-2.2, 31 May 2013

Version 3.1.0
* Version renumber from 3.0.2 prior to DiFX-2.1 release
* Version for DiFX-2.1, 4 May 2012

Version 3.0.2
* Post DiFX-2.0.1
* Improved reporting when weights go crazy (negative)
* --zero (or -0) option: don't write visibilities (well, write one per input file)
  - not useful for AIPS as AIPS requires a UV table
* makefits: pass along non-dashed options to difx2fits
* Do better job verifying baseband data files have compliant names.
* Improved checking on fopen return values
* Maximum number of file descriptors checked.  For large merges this can be a problem.
* Multiple DIFX files per job: don't write records from later files that overlap in time with those written by earlier ones.
  - perhaps later the order of things should change and the _newer_ records get kept.
  - multiple SWITCHEDPOWER and PCAL files are handled in the same way
* Make use of new difx_tcal infrastructure
* Support DiFX job restarts
* Better support for mixed 1 and 2 bit data: include antenna-based numbers in FITS and scale accordingly
* Populate the new RAOBS and DECOBS (pointing center) columns of the source table

Version 3.0.1
* Post 2.0.0
* Make use of clock shifting function in difxio
* Add in Difx-based pulse cal data
* Add in Difx-based tsys
* Fix TSys values in the zoom band cases